--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-oauth/google": "^0.11.1",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
-    "next": "13.4.16",
+    "next": "^13.4.16",
     "next-auth": "^4.23.0",
     "papaparse": "^5.4.1",
     "react": "18.2.0",
