--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-oauth/google": "^0.11.1",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
+    "dotenv": "^16.4.5",
     "next": "^13.4.16",
     "next-auth": "^4.23.0",
     "papaparse": "^5.4.1",
